[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphnetes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
graphnetes = "graphnetes.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["graphnetes"]
